# golden-cpp

./: .gitignore  404.html  CMakeLists.txt  README.md  default-shell.nix  default.nix  derivation-shell.nix  derivation.nix  en.search-data.min.json  flake.nix  index.html  index.xml  project.nix  project_dev_shell.nix  shell.nix  sitemap.xml
.github/workflows/: ci.yml  gh-pages.yml  test-ci.yml  test-flake.yml  test.yml  tests.yml
about/: index.html  index.xml
categories/: index.xml
ci/: clang_asan.sh  clang_codecov.sh  gcc_asan.sh  gcc_tsan.sh  lsan.suppressions  memcheck.suppressions  memcheck_bak.suppressions  tsan.suppressions
docs/: Makefile  config.toml  index.md  links-to-html.lua  mvp.css  simple.css  template.html
docs/content/about/: _index.md
docs/content/documentation/: _index.md
docs/content/documentation/get-started/: _index.md  golden.md
docs/content/get-started/: _index.md  golden.md
documentation/: index.html  index.xml
documentation/get-started/: index.html  index.xml
documentation/get-started/golden/: index.html
get-started/: index.html  index.xml
get-started/golden/: index.html
js/: en.search.min.630bb7e884414685647f517d2cae9ed4dafc410105cdcb5be04c3bd07561213f.js  en.search.min.bf2333d5c72caecd61c25f96dd4e159409b0a909a50b6b6001a8d08c503c7ff9.js  en.search.min.e9d5c4a398512feb27902d77714705584897c08ee40957ec9cd108c9c0c55e91.js
src/: CMakeLists.txt  cli_golden_cpp.cpp  golden.cpp  golden.hpp
src/golden/: CMakeLists.txt
src/golden/cli/: golden.cpp
src/golden/utils/: static.hpp.in
src/silver/: CMakeLists.txt  silver.hpp
src/silver/cli/: silver.cpp
tags/: index.xml
tests/unit/: CMakeLists.txt  test_golden.cpp
